# parallel-pairwise

./: CMakeLists.txt  README.md  cluster_it.py  main.cpp  pairwise_bins.cpp  sigs_to_phmap.cpp
include/: combination.hpp
test_data/: ERR209468.sig  ERR2586220.sig  SRR3132483.sig  SRR5813482.sig  SRR7468281.sig
